--- a/.travis.yml
+++ b/.travis.yml
@@ -42,15 +42,15 @@ jobs:
     - stage: test
       script: robo job:run-unit-tests
       before_install: aws s3 sync s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER .
-    - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
-    - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
-    - script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
-    - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
-    - script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
-    - script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance"
-    - script: robo job:run-functional-javascript-tests "os-search,cp,profiles,classes,pages"
-    - script: robo job:run-functional-javascript-tests "events,vsite,widgets"
-    - script: robo job:run-functional-javascript-tests "os,os-theme-preview,blog,faq,news,presentations,cp-menu"
+#    - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
+#    - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
+#    - script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
+#    - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
+#    - script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
+#    - script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance"
+#    - script: robo job:run-functional-javascript-tests "os-search,cp,profiles,classes,pages"
+#    - script: robo job:run-functional-javascript-tests "events,vsite,widgets"
+#    - script: robo job:run-functional-javascript-tests "os,os-theme-preview,blog,faq,news,presentations,cp-menu"
     - stage: codecov
       script: robo job:run-unit-tests-code-coverage
       after_success: bash <(curl -s https://codecov.io/bash)
