--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,7 @@ jobs:
 
 before_install:
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  - pip install awscli
 
 install:
   - composer global require consolidation/robo
