--- a/composer.json
+++ b/composer.json
@@ -207,6 +207,7 @@
         "drupal/mailchimp": "^1.8",
         "drupal/mathjax": "^2.7",
         "drupal/metatag": "^1.7",
+        "drupal/migrate_file": "^1.1",
         "drupal/migrate_source_csv": "^3.1",
         "drupal/migrate_tools": "^4.5",
         "drupal/node_revision_delete": "^1.0@beta",
