Issue #12959 - Department and Project Group Types (#12996)
* Issue #12959 - Department Group Type

* Issue #12959 - Group Role Permissions

* Issue #12959 - Personal preset for Department

* Issue #12959 - Project - Group Type, Roles & Permissions

* Issue #12959 - Proper Configs

* Issue #12959 - Add route support for group types (#13050)

* Issue #12959 - Alter Routes - WIP

* Issue #12959 - More routes changed & Test fixed

* Issue #12959 - More routes changed & Test fixed

* Issue #12959 - Correct Test - Paths

* Issue #12959 - Unset Preset Settings

--- a/config/sync/group.type.personal.yml
+++ b/config/sync/group.type.personal.yml
@@ -6,7 +6,7 @@ _core:
   default_config_hash: LkcodupOW2ip805bQS1a8B5XlcjfhN8zfU0AiZE417Q
 id: personal
 label: Personal
-description: ''
+description: 'Personal group type.'
 creator_membership: true
 creator_wizard: true
 creator_roles: {  }
