--- a/.travis.yml
+++ b/.travis.yml
@@ -40,15 +40,8 @@ jobs:
       script: robo job:check-module-circular-dependency
       after_success:
         - docker-compose exec -T php drush sql-dump --result-file=./travis-backup.sql
-        - sudo rm -rf node_modules
-        - echo ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}.tar.gz
-        - tar -zcf ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-web.tar.gz web
-        - tar -zcf ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-vendor.tar.gz vendor
         - tar -Jcf ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-web.tar.xz web
         - tar -Jcf ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-vendor.tar.xz vendor
-        - ls -la
-        - aws s3 cp ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-web.tar.gz s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER/os-build-${TRAVIS_BUILD_NUMBER}-web.tar.gz
-        - aws s3 cp ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-vendor.tar.gz s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER/os-build-${TRAVIS_BUILD_NUMBER}-vendor.tar.gz
         - aws s3 cp ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-web.tar.xz s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER/os-build-${TRAVIS_BUILD_NUMBER}-web.tar.xz
         - aws s3 cp ${TRAVIS_BUILD_DIR}-${TRAVIS_BUILD_NUMBER}-vendor.tar.xz s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER/os-build-${TRAVIS_BUILD_NUMBER}-vendor.tar.xz
     - stage: test
@@ -60,9 +53,9 @@ jobs:
         - pip install awscli
         - aws s3 sync s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER .
         - ls -la
-        - tar -zxf os-build-${TRAVIS_BUILD_NUMBER}-web.tar.gz
+        - tar -Jxf os-build-${TRAVIS_BUILD_NUMBER}-web.tar.xz
         - ls -la
-        - tar -zxf os-build-${TRAVIS_BUILD_NUMBER}-vendor.tar.gz
+        - tar -Jxf os-build-${TRAVIS_BUILD_NUMBER}-vendor.tar.xz
         - ls -la
         - chmod +x vendor/bin/phpunit
     - stage: test
@@ -73,8 +66,8 @@ jobs:
         - pip install -U pip
         - pip install awscli
         - aws s3 sync s3://$ARTIFACTS_BUCKET/build_files/$TRAVIS_BUILD_NUMBER .
-        - tar -zxf os-build-${TRAVIS_BUILD_NUMBER}-web.tar.gz
-        - tar -zxf os-build-${TRAVIS_BUILD_NUMBER}-vendor.tar.gz
+        - tar -Jxf os-build-${TRAVIS_BUILD_NUMBER}-web.tar.xz
+        - tar -Jxf os-build-${TRAVIS_BUILD_NUMBER}-vendor.tar.xz
         - chmod +x vendor/bin/phpunit
         - sudo chmod 777 web/modules
         - sudo chmod 777 web/sites/default/files
