--- a/.travis/docker-compose.yml
+++ b/.travis/docker-compose.yml
@@ -93,5 +93,6 @@ services:
   chrome:
     # Note: chrome 67/68 is giving errors so we pin to 65 for now.
     image: previousnext/chrome-headless:65
+    container_name: "${PROJECT_NAME}_chrome"
     ports:
       - "9222:9222"
