--- a/composer.json
+++ b/composer.json
@@ -171,6 +171,7 @@
         "drupal/advancedqueue": "^1.0@beta",
         "drupal/anchor_link": "^2.0",
         "drupal/bibcite": "1.x-dev",
+        "drupal/bibcite_pubmed": "1.x-dev",
         "drupal/blazy": "^2.0",
         "drupal/block_visibility_groups": "^1.3",
         "drupal/bootstrap": "^3.17",
