--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,6 +11,7 @@ module:
   bibcite_export: 0
   bibcite_import: 0
   bibcite_preview: 0
+  bibcite_pubmed: 0
   bibcite_revision_delete: 0
   big_pipe: 0
   blazy: 0
