Issue #13002 - Updating drupal/crop (1.5.0 => 2.0.0) (#13003)
* Issue #13002 - Updating drupal/crop (1.5.0 => 2.0.0)

* Issue #13002 - Make test more stable

--- a/composer.json
+++ b/composer.json
@@ -187,6 +187,7 @@
         "drupal/console": "^1.0.2",
         "drupal/context": "^4.0@beta",
         "drupal/core": "^8.7.11",
+        "drupal/crop": "^2.0",
         "drupal/date_recur": "^2.0",
         "drupal/date_recur_modular": "^1.0@alpha",
         "drupal/disqus": "^1.0",
