Replace chosen to select2 (#12958)
* Issue #12944 - Replace chosen to select2 in taxonomy terms content selection

* Issue #12944 - Fix kernel test

* Issue #12944 - Fix selecting options

* Issue #12944 - Refactor select2 option selection

* Issue #12944 - Refactor select2 option remove

* Issue #12944 - Fix apply tests

* Issue #12944 - Fix remove tests

* Issue #12944 - Replace chosen in Filter by vocab widget

* Issue #12944 - Uninstall chosen module

* Issue #12944 - fixed color contrast in select 2

Co-authored-by: mukeyshkumar <47223502+mukeyshkumar@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -226,6 +226,7 @@
         "drupal/robotstxt": "^1.2",
         "drupal/search_api": "^1.15",
         "drupal/search_api_page": "^1.0@beta",
+        "drupal/select2": "^1.6",
         "drupal/shorten": "2.x-dev",
         "drupal/slick": "^2.0",
         "drupal/slick_media": "^2.0",
@@ -247,6 +248,7 @@
         "mreq/slick-lightbox": "master",
         "npm-asset/blazy": "^1.8",
         "npm-asset/chosen-js": "^1.8",
+        "npm-asset/select2": "^4.0",
         "npm-asset/slick-carousel": "^1.8",
         "oomphinc/composer-installers-extender": "^1.1",
         "php-ds/php-ds": "^1.2",
@@ -334,6 +336,9 @@
         "installer-paths": {
             "web/libraries/chosen": [
                 "npm-asset/chosen-js"
+            ],
+            "web/libraries/select2": [
+                "npm-asset/select2"
             ],
             "web/libraries/slick": [
                 "npm-asset/slick-carousel"
