--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,7 +22,6 @@ module:
   book: 0
   breakpoint: 0
   cancel_button: 0
-  chosen: 0
   chosen_lib: 0
   ckeditor: 0
   ckeditor_bidi: 0
@@ -162,6 +161,7 @@ module:
   robotstxt: 0
   search_api: 0
   search_api_page: 0
+  select2: 0
   serialization: 0
   shorten: 0
   slick: 0
