--- a/profile/modules/custom/os_search/os_search.services.yml
+++ b/profile/modules/custom/os_search/os_search.services.yml
@@ -9,11 +9,11 @@ services:
 
   os_search.os_search_query_builder:
     class: Drupal\os_search\OsSearchQueryBuilder
-    arguments: ['@entity_type.manager', '@config.factory', '@request_stack', '@vsite.context_manager', '@os_app_access.app_loader', '@current_user', '@os_search.os_search_facet_builder', '@current_route_match']
+    arguments: ['@entity_type.manager', '@request_stack', '@vsite.context_manager', '@os_app_access.app_loader', '@current_user', '@os_search.os_search_facet_builder', '@current_route_match', '@os_search.os_search_helper']
 
   os_search.os_search_facet_builder:
     class: Drupal\os_search\OsSearchFacetBuilder
-    arguments: ['@entity_type.manager', '@config.factory', '@request_stack', '@entity_type.bundle.info']
+    arguments: ['@entity_type.manager', '@config.factory', '@request_stack', '@entity_type.bundle.info', '@os_search.os_search_helper']
 
   os_search.os_search_global_access:
     class: Drupal\os_search\OsSearchAppAccess
