Issue #12947 - Print all logs

--- a/.travis.yml
+++ b/.travis.yml
@@ -148,5 +148,5 @@ before_script:
   - cp .travis/RoboFile.php .
 
 after_failure:
-  - docker-compose logs mariadb
+  - docker-compose logs
   - artifacts upload
