--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ before_install:
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 install:
-  - composer global require consolidation/robo
+  - composer global require consolidation/robo:2.0.0
 
 before_script:
   - cp .travis/RoboFile.php .
