--- a/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
+++ b/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
@@ -22,9 +22,9 @@ services:
     class: \Drupal\cp_appearance\CssCollectionRenderer
     public: false
     decorates: asset.css.collection_renderer
-    arguments: ['@cp_appearance.css_collection_renderer.inner']
+    arguments: ['@cp_appearance.css_collection_renderer.inner', '@state', '@vsite.context_manager']
   cp_appearance.js_collection_renderer:
     class: \Drupal\cp_appearance\JsCollectionRenderer
     public: false
     decorates: asset.js.collection_renderer
-    arguments: ['@cp_appearance.js_collection_renderer.inner']
+    arguments: ['@cp_appearance.js_collection_renderer.inner', '@state', '@vsite.context_manager']
